# bevy_toolkits

./: Cargo.toml  README.md
crates/text_mgr/: Cargo.toml
crates/text_mgr/src/: example.rs  fps.rs  lib.rs  status.rs
src/: lib.rs
