[package]
name = "bevy_toolkits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_mgr ={ path = "crates/text_mgr", optional = true}

[workspace]
resolver = "2"
members = [
    "crates/*", 
]

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["text_mgr"]